# meet-me-halfway

./: .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_REVIEW.md  LAUNCH.md  LICENSE  LIVE_MIDPOINT_FEATURE.md  PLAN.md  README.md  docker-compose.yml  firebase.json  parallel-orchestration-prompt.md  plan.md  spec.md
.claude/commands/: health.md
.firebase/: hosting.YXBwc1x3ZWJcZGlzdA.cache
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: api.yml  web.yml
apps/api/: alembic.ini  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_phone_session_map.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/bot/: messages.py  whatsapp.py
apps/api/app/middleware/: logging.py  rate_limit.py  validation.py
apps/api/app/models/: db.py  schemas.py
apps/api/app/routers/: health.py  sessions.py  webhook.py
apps/api/app/services/: cache.py  firebase.py  places.py  session_service.py
apps/api/app/spatial/: __init__.py  midpoint.py  radius.py  ranking.py
apps/api/app/tasks/: cleanup.py
apps/api/tests/: conftest.py  test_cleanup.py  test_health.py  test_midpoint.py  test_places.py  test_radius.py  test_ranking.py  test_sessions.py  test_webhook.py
apps/api/tests/load/: locustfile.py
apps/mobile/: app.json  package.json  tsconfig.json
apps/web/: .env.example  .eslintrc.cjs  index.html  lighthouserc.cjs  package-lock.json  package.json  playwright.config.ts  (+3 more)
infra/: database.rules.json  firebase.json
(+83 files in other folders)
