[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "meet-me-halfway-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "geographiclib>=2.0",
    "geoalchemy2>=0.15",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic-settings>=2.2",
    "firebase-admin",
    "httpx",
    "alembic",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "shapely>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "spatial: spatial algorithm tests",
    "integration: requires live DB/Firebase",
    "e2e: end-to-end tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]
